--- a/eugene/doc/Doc_AnnotaStruct.tex
+++ b/eugene/doc/Doc_AnnotaStruct.tex
@@ -308,7 +308,7 @@ See  \texttt{http://www.sequenceontology.org/wiki/index.php/} \texttt{Category:S
 
 Intergenic information
 \begin{itemize}
-\item \texttt{interg}: SO:0000605 (intergenic_region)
+\item \texttt{interg}: SO:0000605 (intergenic\_region)
 \end{itemize}
 
 Figure of Ontology terms
