--- a/eugene/doc/Doc_ProStart.tex
+++ b/eugene/doc/Doc_ProStart.tex
@@ -49,7 +49,7 @@ If $E$ is the hybridization energy of the RBS, the following probability is used
 
 All predictions that use a predicted start receive a $\log(p)$
 penalty while those that go through a predicted start while they
-could have used it receive a $\log(p)$ penalty.
+could have used it receive a $\log(1-p)$ penalty.
 
 \paragraph{Post analyse}
 
