--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -13,7 +13,7 @@ incompatible with the alignment. The spliced alignments must be
 performed beforehand using a spliced aligner such as \texttt{sim4} or
 \texttt{spidey}. The output of these aligners must be converted in the
 adequate format (see below). 
-To take into account information from ncRNA hits too, set 
+To take into account information from ncRNA hits also, set 
 \texttt{Est.mRNAOnly} to 0.
 
 The sensor is activated by either:
