--- a/eugene/doc/Doc_MarkovConst.tex
+++ b/eugene/doc/Doc_MarkovConst.tex
@@ -6,8 +6,8 @@
 
 A simulated content sensor that gives constant probabilities (as
 indicated in the \texttt{MarkovConst\-.Coding*},
-\texttt{MarkovConst.Intron*}, \texttt{MarkovConst.UTR5*},
-\texttt{MarkovConst.UTR3*} and \texttt{Markov\-Const.Inter*} parameters).
+\texttt{MarkovConst.Intron*}, \texttt{MarkovConst.IntronUTR*}, \texttt{MarkovConst.UTR5*},
+\texttt{Mark\-ovConst.UTR3*}, \texttt{MarkovConst.UIR*} and \texttt{MarkovConst.Inter*} parameters).
 to all positions for each region type. As the MarkovIMM sensor, the
 plugin is controlled by two further parameters:
 \texttt{MarkovConst.minGC} and \texttt{MarkovConst.maxGC} which
@@ -22,8 +22,10 @@ Here is an example of MarkovConst parameters definition.
 \begin{Verbatim}[fontsize=\small]
 MarkovConst.Coding*     1.0
 MarkovConst.Intron*     1.0
-MarkovConst.UTR5*       0.999
-MarkovConst.UTR3*       0.999
+MarkovConst.IntronUTR*  0.98
+MarkovConst.UTR5*       0.99
+MarkovConst.UTR3*       0.99
+MarkovConst.UIR*        0.99
 MarkovConst.Inter*      1.0
 MarkovConst.minGC[0]    0
 MarkovConst.maxGC[0]    100
@@ -41,8 +43,8 @@ If the GC\% of the sequence handled is between
 \texttt{MarkovConst.minGC} and \texttt{MarkovConst.maxGC} then in
 every position, in all possible states, the prediction is penalized by
 the logarithm of the corresponding parameter:
-\texttt{MarkovConst.Coding*}, \texttt{MarkovConst.Intron*},
-\texttt{MarkovConst.UTR5*}, \texttt{MarkovConst.UTR3*} and
+\texttt{MarkovConst.Coding*}, \texttt{MarkovConst.Intron*}, \texttt{MarkovConst.IntronUTR*},
+\texttt{MarkovConst.UTR5*}, \texttt{MarkovConst.UTR3*}, \texttt{MarkovConst.UIR*} and
 \texttt{MarkovConst.Inter*}.
 
 \paragraph{Post analyse}
