--- a/eugene/ChangeLog
+++ b/eugene/ChangeLog
@@ -1,5 +1,17 @@
 -------------------------------------------------------------------------------
-v3.3 released 2 Sept. 2005 
+v4.0 released Janv. 2011
+-------------------------------------------------------------------------------
+
+* EuGene is able to annotate prokarotic sequence. It can predict overlapped genes and operon structure.
+
+-------------------------------------------------------------------------------
+v3.6 released Fevr. 2010
+-------------------------------------------------------------------------------
+
+EuGene can now predict non protein coding RNA.
+
+-------------------------------------------------------------------------------
+v3.3 released 2 Sept. 2005
 -------------------------------------------------------------------------------
 
 * Output.cc Output.h disapear. Now eugene textual outputs are printed by Prediction class.
