tiny changes (reformulation, formatting)

--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -12,9 +12,8 @@ exonic and intronic state costs by penalizing states that are
 incompatible with the alignment. The spliced alignments must be
 performed beforehand using a spliced aligner such as \texttt{sim4} or
 \texttt{spidey}. The output of these aligners must be converted in the
-adequate format (see below). 
-To take into account information from ncRNA hits also, set 
-\texttt{Est.mRNAOnly} to 0.
+adequate format (see below).  To also take into account information
+from ncRNA hits, set \texttt{Est.mRNAOnly} to 0.
 
 The sensor is activated by either:
 \begin{itemize}
