--- a/eugene/doc/Doc_MarkovConst.tex
+++ b/eugene/doc/Doc_MarkovConst.tex
@@ -6,8 +6,9 @@
 
 A simulated content sensor that gives constant probabilities (as
 indicated in the \texttt{MarkovConst\-.Coding*},
-\texttt{MarkovConst.Intron*}, \texttt{MarkovConst.IntronUTR*}, \texttt{MarkovConst.UTR5*},
-\texttt{Mark\-ovConst.UTR3*}, \texttt{MarkovConst.UIR*} and \texttt{MarkovConst.Inter*} parameters).
+\texttt{MarkovConst.Intron*}, \texttt{MarkovConst.IntronUTR*},
+\texttt{MarkovConst.UTR5*}, \texttt{Mark\-ovConst.UTR3*},
+\texttt{MarkovConst.UIR*} and \texttt{MarkovConst.Inter*} parameters).
 to all positions for each region type. As the MarkovIMM sensor, the
 plugin is controlled by two further parameters:
 \texttt{MarkovConst.minGC} and \texttt{MarkovConst.maxGC} which
@@ -43,8 +44,9 @@ If the GC\% of the sequence handled is between
 \texttt{MarkovConst.minGC} and \texttt{MarkovConst.maxGC} then in
 every position, in all possible states, the prediction is penalized by
 the logarithm of the corresponding parameter:
-\texttt{MarkovConst.Coding*}, \texttt{MarkovConst.Intron*}, \texttt{MarkovConst.IntronUTR*},
-\texttt{MarkovConst.UTR5*}, \texttt{MarkovConst.UTR3*}, \texttt{MarkovConst.UIR*} and
+\texttt{MarkovConst.Coding*}, \texttt{MarkovConst.Intron*},
+\texttt{MarkovConst.IntronUTR*}, \texttt{MarkovConst.UTR5*},
+\texttt{MarkovConst.UTR3*}, \texttt{MarkovConst.UIR*} and
 \texttt{MarkovConst.Inter*}.
 
 \paragraph{Post analyse}
