--- a/eugene/doc/Doc_MarkovConst.tex
+++ b/eugene/doc/Doc_MarkovConst.tex
@@ -21,22 +21,24 @@ distributions of HMM.
 
 Here is an example of MarkovConst parameters definition.
 \begin{Verbatim}[fontsize=\small]
-MarkovConst.Coding*     1.0
-MarkovConst.Intron*     1.0
-MarkovConst.IntronUTR*  0.98
-MarkovConst.UTR5*       0.99
-MarkovConst.UTR3*       0.99
-MarkovConst.UIR*        0.99
-MarkovConst.Inter*      1.0
-MarkovConst.minGC[0]    0
-MarkovConst.maxGC[0]    100
-Sensor.MarkovConst.use  1   # Use MarkovConst sensor
-Sensor.MarkovConst      1      # Sensor priority
+MarkovConst.Coding*        1.0
+MarkovConst.Intron*        1.0
+MarkovConst.IntronUTR*     0.98
+MarkovConst.UTR5*          0.99
+MarkovConst.UTR3*          0.99
+MarkovConst.UIR*           0.99
+MarkovConst.RNA*           0.99
+MarkovConst.Inter*         1.0
+MarkovConst.affectedStrand 0
+MarkovConst.minGC[0]       0
+MarkovConst.maxGC[0]       100
+Sensor.MarkovConst.use     1   # Use MarkovConst sensor
+Sensor.MarkovConst         1      # Sensor priority
 \end{Verbatim}
 
 \paragraph{Input files format}
 
-No input files  needed.
+No input files needed.
 
 \paragraph{Integration of information}
 
@@ -46,8 +48,12 @@ every position, in all possible states, the prediction is penalized by
 the logarithm of the corresponding parameter:
 \texttt{MarkovConst.Coding*}, \texttt{MarkovConst.Intron*},
 \texttt{MarkovConst.IntronUTR*}, \texttt{MarkovConst.UTR5*},
-\texttt{MarkovConst.UTR3*}, \texttt{MarkovConst.UIR*} and
-\texttt{MarkovConst.Inter*}.
+\texttt{MarkovConst.UTR3*}, \texttt{MarkovConst.UIR*}, 
+\texttt{MarkovConst.RNA*} and \texttt{MarkovConst.Inter*}.
+
+To penalize only the forward strand set 
+\texttt{MarkovConst.affectedStrand} parameter value to 1;
+to penalize only the reverse one set it to -1, and to penalize both strands let the value to 0.
 
 \paragraph{Post analyse}
 
